--- a/index.html
+++ b/index.html
@@ -11,6 +11,40 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
+    <header class="site-header">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-4 nav-logo">
+                    <a href="#"><img src="images/agora-grafika-logo.png"></a>
+                </div>
+                <nav class="col-xs-8 col-md-6 col-md-offset-2 nav-container" role="navigation">
+                    <button class="nav-toggle" aria-expanded="false" data-target="#mainNavbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <div class="hamburger-container">
+                            <i class="hamburger-icon" aria-hidden="true"></i>
+                        </div>
+                    </button>
+                    <ul id="mainNavbar" class="main-menu">
+                        <li class="menu-item current-menu-item"><a href="#">Home</a></li>
+                        <li class="menu-item menu-item-has-children"><a href="#">Nasze usługi</a>
+                            <ul class="sub-menu">
+                                <li class="menu-item"><a href="#">Strony WWW</a></li>
+                                <li class="menu-item"><a href="#">Reklama internetowa</a></li>
+                                <li class="menu-item"><a href="#">Skład DTP i reklama</a></li>
+                                <li class="menu-item"><a href="#">Montaż wideo i drony</a></li>
+                                <li class="menu-item"><a href="#">Identyfikacja wizualna</a></li>
+                                <li class="menu-item"><a href="#">Copywriter</a></li>
+                            </ul>
+                        </li>
+                        <li class="menu-item"><a href="#">Portfolio</a></li>
+                        <li class="menu-item"><a href="#">Cennik</a></li>
+                        <li class="menu-item"><a href="#">Blog</a></li>
+                        <li class="menu-item"><a href="#">Kontakt</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
     <script src="js/scripts.js"></script>
 </body>
 </html>
