HTML - hero markup

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
             </div>
         </div>
     </header>
+    <div class="container-fluid hero-container">
+        <h1 class="hero-title">Patrzymy Kreatywnie</h1>
+        <div class="hero-subtitle">
+            <span>Miej na nas oko</span>
+        </div>
+        <p class="lead hero-lead">Profesjonalnie przygotujemy, fachowo zaprojektujemy, sprawnie wykonamy, od siebie dodamy</p>
+        <img class="hero-scroll" src="images/scroll.png" alt="Przewiń stronę - ikona">
+    </div>
     <script src="js/scripts.js"></script>
 </body>
 </html>
